# scpy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN.md
crates/scpy-crypto/: Cargo.toml
crates/scpy-crypto/src/: lib.rs
src/: api.rs  app.rs  lib.rs  main.rs  protocol.rs  server.rs  store.rs
style/: main.scss
tests/: e2e_encrypted_room.rs  e2e_encrypted_room_redis.rs
