[package]
name = "scpy-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
zeroize = { version = "1", features = ["derive"] }
